fix styles on safari

--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -184,3 +184,13 @@ blockquote {
 blockquote > p {
   line-height: 1.4em;
 }
+
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
